--- a/app/src/main/res/raw/usage_en.html
+++ b/app/src/main/res/raw/usage_en.html
@@ -14,30 +14,30 @@
 
 <div class="w3-row">
 <div class="w3-col w3-container m8 l9 w3-pale-green">
-<h3>程序说明</h3>
-感谢使用本公司的蓝牙防丢器产品。该产品基于蓝牙4.0 BLE 技术，当您把防丢器和易丢失的物品，比如背包、书包等绑定在一起，通过该APP软件设置相关的参数后，就能防止重要物品丢失和寻物功能。
-<img src="logo.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<h3>App Introduction</h3>
+	Thank you for choosing the tag alarm device from us. This device can be connected to mobile phones and tablets which support Bluetooth BLE 4.0 standard. You could pair it on wallet, handbag, key, child, old man or pet, etc., next you can find them by operating on your mobile phone or tablet.
+	<img src="logo.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </div>
 </div>
 
 <div class="w3-row">
 <div class="w3-col w3-container m8 l9 w3-pale-green">
-	<h3>防丢器介绍</h3>
+	<h3>Device Operation</h3>
 	<ul  class="w3-ul">
-	<li>开机：长按按钮3-5秒听到2声 则为开机成功</li>
-	<li>关机：长按按钮3-5秒听到1声 则为关机成功</li>
+	<li>Device turn-on: Press and hold the button on device for 3-5 seconds until you hear the sound 'Di-Di'.</li>
+	<li>Device turn-off: Press and hold the button on device for 3-5 seconds until you hear the sound 'Di'.</li>
 	</ul>
 	<img src="antilost.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway"  >
-</div>		
+</div>
 </div>
 
 <div class="w3-row">
 <div class="w3-col w3-container m8 l9 w3-pale-green">
-	<h3>设备连接</h3>
+	<h3>Connecting device</h3>
 	<p>
 	<ul  class="w3-ul">
-	<li>点击搜索设备，显示搜索出的未连接设备</li>
-	<li>如图显示“未连接”’请点击“连接”按钮即可</li>
+	<li>Click ‘Searching Devices’ icon, then you’ll see the devices waiting for connection.</li>
+	<li>As showed in the picture ‘Not Connected’, please click ‘Connect’ icon.</li>
 	</ul>
 </p>
 <img src="connect.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
@@ -46,14 +46,14 @@
 
 <div class="w3-row">
 <div class="w3-col w3-container m8 l9 w3-pale-green">
-<h3>告警设置</h3>
+<h3>Warning Settings</h3>
 
 <ul class="w3-ul">
-<li>双击防丢器按钮可触发手机报警</li>
-<li>手机告警器响起时，点击红色告警区域可关闭告警</li>
-<li>点击“告警”按钮时即可开启或关闭防丢器告警</li>
+<li>Double click the button on device to activate the alarm function of the App.</li>
+<li>When the alarm is on, click the red zone of alarming to stop it.</li>
+<li>Click 'Alarm' icon to start or stop the alarm.</li>
 <img src="warning.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
-<li>开启防丢开关后,可设置防丢器设备的报警功能</li>
+<li>You can set the alarm when the ‘Anti-Lost’ function is turned on.</li>
 <img src="switch_button.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </ul>
 </p>
@@ -64,8 +64,8 @@
 
 <div class="w3-row">
 <div class="w3-col w3-container m8 l9 w3-pale-green">
-<h3>拍照</h3>
-单击拍照按钮，即进入拍照状态，右下角可以进行拍摄设置，单击防丢器即可进行拍照。<br>
+<h3>Camera</h3>
+	Click camera icon to enter camera mode. The 'Settings' icon is located at bottom-left corner. Click the button on device to take a photo.<br>
 <img src="camera.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </div>
 </div>
@@ -73,22 +73,22 @@
 
 <div class="w3-row">
 <div class="w3-col w3-container m8 l9 w3-pale-green">
-<h3>定位</h3>
-点击即可以对当前位置进行定位，并可查看定位列表及遗失历史。<br>
+<h3>Location</h3>
+Click the Location Button to go into the map mode and get the current location. The location history and lost history are also available.<br>
 <img src="location.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </div>
 </div>
 
 <div class="w3-row">
 <div class="w3-col w3-container m8 l9 w3-pale-green">
-<h3>设置</h3>
-为了更好的体验，进入设置菜单下，可以对防丢器进行设置（如图所示）
-勿扰模式：如图所示“勿扰”开关后，所以防丢器设备告警功能失效<br>
+<h3>Settings</h3>
+Enter the 'Settings' menu to configure the device.
+'Do Not Disturb' mode: As showed in the picture, when the 'Do Not Disturb' mode is on, the alarm function would be deactivated.<br>
 <img src="disturb.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 <ul class="w3-ul">
-<li>密码保护：开启后，进入APP需要输入密码；关闭后，可直接进入APP设置防丢器.</li>
-<li>地图选择，可选择百度地图或者谷歌地图</li>
-<li>版本号：查看当前版本</li>
+<li>'Password protection': When the 'Password protection' function is enable, you need to input the correct password before entering the App; When the 'Password protection' function is disable, you can enter the App directly.</li>
+<li>Map Select: You can select from 'Baidu Map' and 'Google Map' as you wish</li>
+<li>Version: To check the current App version.</li>
 <img src="setting.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </ul>
 </div>
