1. flash problem 2. the image dose not show in gallery

--- a/app/src/main/res/raw/usage_en.html
+++ b/app/src/main/res/raw/usage_en.html
@@ -40,7 +40,7 @@
 	<li>As showed in the picture ‘Not Connected’, please click ‘Connect’ icon.</li>
 	</ul>
 </p>
-<img src="connect.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<img src="connecting_en.png" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </div>
 </div>
 
@@ -52,9 +52,9 @@
 <li>Double click the button on device to activate the alarm function of the App.</li>
 <li>When the alarm is on, click the red zone of alarming to stop it.</li>
 <li>Click 'Alarm' icon to start or stop the alarm.</li>
-<img src="warning.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<img src="warning_en.png" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 <li>You can set the alarm when the ‘Anti-Lost’ function is turned on.</li>
-<img src="switch_button.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<img src="switch_button_en.png" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </ul>
 </p>
 
@@ -66,7 +66,7 @@
 <div class="w3-col w3-container m8 l9 w3-pale-green">
 <h3>Camera</h3>
 	Click camera icon to enter camera mode. The 'Settings' icon is located at bottom-left corner. Click the button on device to take a photo.<br>
-<img src="camera.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<img src="camera_en.png" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </div>
 </div>
 
@@ -75,7 +75,7 @@
 <div class="w3-col w3-container m8 l9 w3-pale-green">
 <h3>Location</h3>
 Click the Location Button to go into the map mode and get the current location. The location history and lost history are also available.<br>
-<img src="location.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<img src="location_en.png" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </div>
 </div>
 
@@ -84,12 +84,12 @@ Click the Location Button to go into the map mode and get the current location. 
 <h3>Settings</h3>
 Enter the 'Settings' menu to configure the device.
 'Do Not Disturb' mode: As showed in the picture, when the 'Do Not Disturb' mode is on, the alarm function would be deactivated.<br>
-<img src="disturb.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<img src="disturb_en.png" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 <ul class="w3-ul">
 <li>'Password protection': When the 'Password protection' function is enable, you need to input the correct password before entering the App; When the 'Password protection' function is disable, you can enter the App directly.</li>
 <li>Map Select: You can select from 'Baidu Map' and 'Google Map' as you wish</li>
 <li>Version: To check the current App version.</li>
-<img src="setting.jpg" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
+<img src="setting_en.png" class="w3-border w3-padding-4 w3-padding-tiny" alt="Norway">
 </ul>
 </div>
 </div>
